--- a/rx_gcm/build.gradle
+++ b/rx_gcm/build.gradle
@@ -23,7 +23,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.google.android.gms:play-services-gcm:7.5.0'
+    compile "com.google.android.gms:play-services-gcm:8.4.0"
 
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.0.1'
