--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile "com.squareup.retrofit:adapter-rxjava:2.0.0-beta1"
     compile "com.squareup.retrofit:converter-gson:2.0.0-beta1"
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'io.reactivex:rxandroid:1.1.0'
 
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:support-annotations:23.1.1'
